# dsp-graph

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dsp_graph.md  dsp_pydantic.md  threading-plan.md
examples/: fbdelay.py  filter_chain.py  gen_dsp_targets.py  multirate_synth.py  onepole.py  smooth_gain.py  stereo_gain.py  wavetable.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BuildPanel.tsx  CompilePanel.tsx  EditorPane.tsx  GdspEditor.tsx  GraphCanvas.tsx  GraphToolbar.tsx  LayoutPanel.tsx  NodeCatalog.tsx  NodeInspector.tsx  OptimizePanel.tsx  Sidebar.tsx  SimulationPanel.tsx  SpectrumDisplay.tsx  StatusBar.tsx  WaveformDisplay.tsx
frontend/src/hooks/: useApi.ts  useGdspLivePreview.ts  useGraph.optimize.test.ts  useGraph.test.ts  useGraph.ts  useHandlePositions.ts
frontend/src/nodes/: DspNode.tsx  InputNode.tsx  OutputNode.tsx  ParamNode.tsx
frontend/src/utils/: a11y.ts  colors.ts  elkLayout.ts  fft.test.ts  fft.ts  gdspCompletions.ts  gdspGoToDef.ts  gdspLang.ts  layout.ts  nodeFields.ts
src/dsp_graph/: __init__.py  __main__.py  _deps.py  algebra.py  cache.py  cli.py  compile.py  config.py  convert.py  gen_dsp_adapter.py  maxpat.py  models.py  optimize.py  security.py  server.py  simulate.py  subgraph.py  toposort.py  validate.py  visualize.py
src/dsp_graph/api/: build.py  compile.py  generate.py  genexpr.py  graph.py  layout.py  maxpat.py  optimize.py  simulate.py
tests/: conftest.py  test_algebra.py  test_api_build.py  test_api_compile.py  test_api_genexpr.py  test_api_graph.py  test_api_layout.py  test_api_maxpat.py  test_api_optimize.py  test_api_simulate.py  test_cache.py  test_cli.py  test_compile.py  test_convert.py  test_gen_dsp_adapter.py  test_models.py  test_multirate.py  test_optimize.py  test_security.py  test_simulate.py  test_subgraph.py  test_threading.py  test_toposort.py  test_validate.py  test_visualize.py
