[project]
name = "dsp-graph"
version = "0.1.5"
description = "A Python DSL for defining DSP signal graphs with JSON serialization"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "gen-dsp>=0.1.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dsp_graph --cov-report term-missing:skip-covered"

[tool.mypy]
strict = true
packages = ["dsp_graph"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

