[project]
name = "dsp-graph"
version = "0.1.8"
description = "Visual graph editor, inspector, and debugger for gen-dsp signal graphs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = ["dsp", "audio", "signal-processing", "graph", "editor", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "gen-dsp[graph]>=0.1.15",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
dsp-graph = "dsp_graph.cli:main"

[project.urls]
Homepage = "https://github.com/shakfu/dsp-graph"
Repository = "https://github.com/shakfu/dsp-graph"
Issues = "https://github.com/shakfu/dsp-graph/issues"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dsp_graph --cov-report term-missing:skip-covered"

[tool.mypy]
strict = true
packages = ["dsp_graph"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
